<resources>
    <string name="app_name">BookCatalog</string>
    <string name="search_hint">Search...</string>
    <string name="no_books_found">No books found</string>
    <string name="description">Description</string>
    <string name="details">Details</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="publisher">Publisher</string>
    <string name="published">Published</string>
    <string name="network_request_failed">Network request failed</string>
</resources>
